[package]
name = "rust-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
dashmap = "6.2.1"
log4rs = "1.4.0"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
uuid = "1.23.2"
